# witness-angel-keygen

./: .gitignore  README.md  Readme.rst  pyproject.toml  wa_keygen_gui.kv  wa_keygen_gui.py  wa_keygen_gui.spec
WardProject/: Key_device_last.py  key_device.py  key_gen_gui.py  key_gen_gui.spec  main.kv  radioBox.py
WardProject/IconsWitnessAngel/: sauvegarde.py
