[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "wakeygen"
description = "Witness Angel Keygen"
version = "0.1"
license = "MIT"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Akram Bourichi"]
homepage = "https://github.com/WitnessAngel/witness-angel-keygen"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = []
exclude = []

[tool.poetry.dependencies]
python = ">=3.6,<4"

# Cryptography
wacryptolib = "^0.5.2"

Kivy = {version = "^2.0.0", extras = ["base"]}
kivymd = "^0.104.1"

[tool.poetry.dev-dependencies]
